cmake_minimum_required(VERSION 3.5)
project(algorithm_study)

set(CMAKE_CXX_STANDARD 17)

# include_directories(auxiliary)
# add_subdirectory(boj)
# add_subdirectory(boj2)
# add_subdirectory(boj3)
# add_subdirectory(boj4)
# add_subdirectory(boj5)
add_subdirectory(boj6)
# add_subdirectory(theory)
add_subdirectory(algospot)
